# pyAutoMark

./: .gitignore  CHANEGLOG.md  MANIFEST.in  README.md  TODO.md  args.py  cohort.py  config.py  conftest.py  cunit.py  extract_downloads.py  files.py  find_duplicates.py  generate_template.py  github_retrieve.py  mark.py  mock_test.py  pam  pyAutoMark.py  pyam  pyproject.toml  python_test.py  run_tests.py  setup.py  template-template.xlsx  vhdl_test.py
docs/: .buildinfo  configuration.html  genindex.html  getting-started.html  glossary.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  pyam.cmd.html  pyam.fixtures.html  pyam.html  quickstart.html  schema.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/pyam/: args.html  cohort.html  config.html  config_manager.html  cunit.html  extract_downloads.html  files.html  find_duplicates.html  generate_template.html  github_retrieve.html  mark.html  pam.html  pyAutoMark.html  run_pytest.html  run_tests.html  test_manifest.html
docs/_sources/: glossary.rst.txt  index.rst.txt  installation.rst.txt  modules.rst.txt  pyam.cmd.rst.txt  pyam.rst.txt  schema.rst.txt
docs/_sources/cmds/: cohort.rst.txt  config.rst.txt  find-duplicates.rst.txt  index.rst.txt  retrieve.rst.txt  run.rst.txt
docs/_static/: documentation_options.js
docs/cmds/: cohort.html  config.html  extract.html  find-duplicates.html  generate-template.html  index.html  init.html  mark.html  retrieve.html  run.html  write-csv.html
docs/doctrees/: environment.pickle  index.doctree  modules.doctree  pyam.doctree  pyam.fixtures.doctree
docs/examples/: clang.html  cmock.html  python.html  vhdl.html
docs/html/: index.html  py-modindex.html  pyam.fixtures.html  pyam.html  search.html  searchindex.js
docsrc/: Makefile  README.md
docsrc/source/: conf.py  configuration.rst  index.rst  installation.rst  pyam.cmd.rst  pyam.fixtures.rst  pyam.rst  quickstart.rst  schema.rst
pyam/: __init__.py  args.py  cohort.py  config.py  config_manager.py  cunit.py  extract_downloads.py  files.py  find_duplicates.py  generate_template.py  github_retrieve.py  mark.py  pam.py  pyAutoMark.py  run_pytest.py  run_tests.py  template-template.xlsx  test_manifest.py
pyam/cmd/: __init__.py  args.py  cohort.py  config.py  extract_downloads.py  find_duplicates.py  generate_template.py  github_push.py  github_retrieve.py  init.py  mark.py  run.py  write_csv.py
pyam/fixtures/: __init__.py  c_mock.py  clang.py  common.py  python.py  vhdl.py  xlsx.py
(+36 files in other folders)
